--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,5 +17,5 @@
     <string name="plus">+</string>
     <string name="order_summary">Order Summary</string>
     <string name="order">ORDER</string>
-    <string name="defualt_amount">$0</string>
+    <string name="default_amount">$0</string>
 </resources>
